[FEAT] New product crud feature, swagger documentation, api routes and json-postman export
